--- a/front/package.json
+++ b/front/package.json
@@ -31,7 +31,8 @@
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-vector-icons": "^10.1.0",
-    "warn-once": "^0.1.1"
+    "warn-once": "^0.1.1",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
