Pods 관련 에러 해결 및 캘린더에 피드 내용 연동시키기

--- a/front/android/app/build.gradle
+++ b/front/android/app/build.gradle
@@ -123,4 +123,9 @@ apply from: file("../../node_modules/@react-native-community/cli-platform-androi
 project.ext.vectoricons = [
     iconFontNames: [ 'MaterialIcons.ttf', 'Ionicons.ttf', 'Octicons.ttf' ]
 ]
+
+project.ext.react = [
+    enableHermes: false  // Hermes를 비활성화합니다.
+]
+
 apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle")
